--- a/ex002/style.css
+++ b/ex002/style.css
@@ -1,2 +1,17 @@
 @charset "UTF-8";
 
+
+
+body{
+    font-family: Arial, Helvetica, sans-serif;
+
+
+}
+
+iframe#tela{
+    width: 95vw;
+    height: 350vw;
+    border: 2px solid black;
+
+
+}
